--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,7 +35,35 @@
           <img srcset="img/imagen2.jpg" alt="imagen de conputadora" />
         </picture>
       </div>
+
+      <!--Listas-->
+      <ol>
+        <li>Cafe</li>
+        <li>Te</li>
+        <li>Leche</li>
+      </ol>
+
+      <ul>
+        <li>Cafe</li>
+        <li>Te</li>
+        <li>Leche</li>
+      </ul>
     </div>
+
+    <form>
+      <label>Nombre</label>
+      <input type="text" />
+      <label>Contraseña</label>
+      <input type="password" />
+      <label>Fecha de nacimiento</label>
+      <input type="date" />
+      <button>Enviar</button>
+      <textarea></textarea>
+
+      <input type="radio" name="nombre" />Opcion 1
+      <input type="radio" name="nombre" />Opcion 2
+      <input type="radio" name="nombre" />Opcion 3
+    </form>
   </body>
   <footer>Terminos y condiciones, FAQs etc.</footer>
   <script src="ejercicios.js"></script>
