inline vs block apuntes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -64,6 +64,21 @@
       <input type="radio" name="nombre" />Opcion 2
       <input type="radio" name="nombre" />Opcion 3
     </form>
+
+    <!--inline vs bloxk-->
+    <p>Texto</p>
+    <p>Texto extra mega largo archirequecontra larguisimo</p>
+    <p>
+      Texto extra mega largo archirequecontra larguisimo Texto extra mega largo
+      archirequecontra larguisimo Texto extra mega largo archirequecontra
+      larguisimo Texto extra mega largo archirequecontra larguisimoTexto extra
+      mega largo archirequecontra larguisimoTexto extra mega largo
+      archirequecontra larguisimo
+    </p>
+
+    <a href="#" id="link1" class="links">Link 1</a>
+    <a href="#" class="links">Este es otro link</a>
+    <a href="#" class="links">Aqui hay otro link </a>
   </body>
   <footer>Terminos y condiciones, FAQs etc.</footer>
   <script src="ejercicios.js"></script>
