--- a/CSS/index.html
+++ b/CSS/index.html
@@ -17,6 +17,7 @@
       }
     </style>
     <!--Clase de Selectores-->
+    <h2 class="Titulos">Clase Selectores</h2>
     <p class="cuadrado1 segundaclase">Aqui el contenido del cuadradp uno</p>
     <p class="cuadrado2">Aqui el contenido del cuadrado uno</p>
     <h1 id="encabezado" class="encabezados">Titulo 1</h1>
@@ -42,6 +43,29 @@
       barco chiquito. Un barco chiquito era se una vez. Era una paloma punto y
       coma, que venia de marte punto y a parte, que buscaba un nido, punto y
       seguido era una nimal, punto final.
+    </div>
+
+    <!--Clase de unidades-->
+
+    <h2 class="Titulos">Clase de unidades</h2>
+
+    <div id="caja1" class="selectores">
+      Esya es la caja uno Era una paloma, punto y coma; que venia de marte.
+      Punto y a parte. <br />
+      Que buscaba un nido. Punto y seguito. Era un animal. Punto final.
+    </div>
+    <div id="caja2" class="selectores">
+      Esta es la caja 2Era una paloma, punto y coma; que venia de marte. Punto y
+      a parte. <br />
+      Que buscaba un nido. Punto y seguito. Era un animal. Punto final
+    </div>
+    <div
+      id="cajacontenedora"
+      class="selectores"
+      style="background-color: rgb(195, 0, 255)"
+    >
+      <div id="caja3" class="selectores">3</div>
+      <div id="caja4" class="selectores">4</div>
     </div>
   </body>
 </html>
