--- a/CSS/index.html
+++ b/CSS/index.html
@@ -67,5 +67,16 @@
       <div id="caja3" class="selectores">3</div>
       <div id="caja4" class="selectores">4</div>
     </div>
+
+    <p class="unidades">Texto a 40 px</p>
+    <div class="unidades">
+      Aqui se muestra la fuente dentro del primer div que tiene el valor de 1
+      rem
+
+      <p class="unidades parrafo2">
+        Este es un segundo parrafo dentro del div con el valor de la fuente en 2
+        rem
+      </p>
+    </div>
   </body>
 </html>
