Clase Jerarquia Apuntes

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -77,6 +77,11 @@
         Este es un segundo parrafo dentro del div con el valor de la fuente en 2
         rem
       </p>
+
+      <!--CLASE DE JERARQUIA-->
+      <h2 class="Titulos">Clase Jerarquia</h2>
+
+      <h3 class="Jerarquia" id="titulo1">Esto es un heading 3</h3>
     </div>
   </body>
 </html>
