--- a/CSS/index.html
+++ b/CSS/index.html
@@ -83,5 +83,14 @@
 
       <h3 class="Jerarquia" id="titulo1">Esto es un heading 3</h3>
     </div>
+
+    <!--Clase Display-->
+
+    <h2 class="Titulos">Clase Display</h2>
+    <div class="Display" id="d1">1</div>
+    <div class="Display" id="d2">2</div>
+    <div class="Display" id="d3">3</div>
+    <div class="Display" id="d4">4</div>
+    <div class="Display" id="d5">5</div>
   </body>
 </html>
