--- a/CSS/index.html
+++ b/CSS/index.html
@@ -17,7 +17,7 @@
       }
     </style>
     <!--Clase de Selectores-->
-    <h2 class="Titulos">Clase Selectores</h2>
+    <h2 class="Titulos selectores">Clase Selectores</h2>
     <p class="cuadrado1 segundaclase">Aqui el contenido del cuadradp uno</p>
     <p class="cuadrado2">Aqui el contenido del cuadrado uno</p>
     <h1 id="encabezado" class="encabezados">Titulo 1</h1>
@@ -47,7 +47,7 @@
 
     <!--Clase de unidades-->
 
-    <h2 class="Titulos">Clase de unidades</h2>
+    <h2 class="Titulos unidades">Clase de unidades</h2>
 
     <div id="caja1" class="selectores">
       Esya es la caja uno Era una paloma, punto y coma; que venia de marte.
@@ -77,20 +77,33 @@
         Este es un segundo parrafo dentro del div con el valor de la fuente en 2
         rem
       </p>
-
-      <!--CLASE DE JERARQUIA-->
-      <h2 class="Titulos">Clase Jerarquia</h2>
-
-      <h3 class="Jerarquia" id="titulo1">Esto es un heading 3</h3>
     </div>
+
+    <!--CLASE DE JERARQUIA-->
+    <h2 class="Titulos jerarquia">Clase Jerarquia</h2>
+
+    <h3 class="Jerarquia" id="titulo1">Esto es un heading 3</h3>
 
     <!--Clase Display-->
 
-    <h2 class="Titulos">Clase Display</h2>
+    <h2 class="Titulos display">Clase Display</h2>
     <div class="Display" id="d1">1</div>
     <div class="Display" id="d2">2</div>
     <div class="Display" id="d3">3</div>
     <div class="Display" id="d4">4</div>
     <div class="Display" id="d5">5</div>
+
+    <!--  Clase de Position y Z-index -->
+
+    <h2 class="Titulos position">Clase de Position y Z-index></h2>
+
+    <div class="position static">Posicionamiento estatico</div>
+    <div class="position relativo">Posicionamiento relativo</div>
+    <div class="position absoluto">Posicionamiento absoluto</div>
+
+    <div class="position padre">
+      Relativo padre
+      <div class="position hijo">Relativo hijo</div>
+    </div>
   </body>
 </html>
