Cree carpeta ejercicios

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -105,5 +105,9 @@
       Relativo padre
       <div class="position hijo">Relativo hijo</div>
     </div>
+
+    <!-- Clase de Flex -->
+
+    <h2 class="Titulos flex">Clase de Flex</h2>
   </body>
 </html>
