--- a/CSS/index.html
+++ b/CSS/index.html
@@ -109,5 +109,43 @@
     <!-- Clase de Flex -->
 
     <h2 class="Titulos flex">Clase de Flex</h2>
+
+    <div id="padre">
+      <div id="cflex1" class="hijos">1</div>
+      <div id="cflex2" class="hijos">2</div>
+      <div id="cflex3" class="hijos">3</div>
+      <div id="cflex4" class="hijos">4</div>
+      <div id="cflex5" class="hijos">5</div>
+    </div>
+
+    <div id="padre2">
+      <div id="cflex11" class="hijos">
+        El mundo no nos pertenece, nosotros le pertenecemos al mundo. Este es un
+        texto para ser repetido en multiples ocaciones y tener un parrafo que
+        pueda ser notorio en la pagina web. La autoridad y no la verdad, hace la
+        ley. Todo lo que existe nace sin razon, se prolonga por debilidad y
+        muere por casualidad.
+      </div>
+      <div id="cflex12" class="hijos">2</div>
+      <div id="cflex13" class="hijos">3</div>
+      <div id="cflex14" class="hijos">
+        El mundo no nos pertenece, nosotros le pertenecemos al mundo. Este es un
+        texto para ser repetido en multiples ocaciones y tener un parrafo que
+        pueda ser notorio en la pagina web. La autoridad y no la verdad, hace la
+        ley. Todo lo que existe nace sin razon, se prolonga por debilidad y
+        muere por casualidad.
+      </div>
+      <div id="cflex15" class="hijos">
+        El mundo no nos pertenece, nosotros le pertenecemos al mundo. Este es un
+        texto para ser repetido en multiples ocaciones y tener un parrafo que
+        pueda ser notorio en la pagina web. La autoridad y no la verdad, hace la
+        ley. Todo lo que existe nace sin razon, se prolonga por debilidad y
+        muere por casualidad. El mundo no nos pertenece, nosotros le
+        pertenecemos al mundo. Este es un texto para ser repetido en multiples
+        ocaciones y tener un parrafo que pueda ser notorio en la pagina web. La
+        autoridad y no la verdad, hace la ley. Todo lo que existe nace sin
+        razon, se prolonga por debilidad y muere por casualidad.
+      </div>
+    </div>
   </body>
 </html>
