--- a/CSS/index.html
+++ b/CSS/index.html
@@ -147,5 +147,17 @@
         razon, se prolonga por debilidad y muere por casualidad.
       </div>
     </div>
+
+    <!--Clase de GRID 1-->
+
+    <h2 class="Titulos Grid">Clase de Grid 1</h2>
+
+    <div class="Grid Padre">
+      <div class="Grid hijos c1">1</div>
+      <div class="Grid hijos c2">2</div>
+      <div class="Grid hijos c3">3</div>
+      <div class="Grid hijos c4">4</div>
+      <div class="Grid hijos c5">5</div>
+    </div>
   </body>
 </html>
