--- a/CSS/index.html
+++ b/CSS/index.html
@@ -159,5 +159,16 @@
       <div class="Grid hijos c4">4</div>
       <div class="Grid hijos c5">5</div>
     </div>
+
+    <div class="Grid Padre areas">
+      <div class="Grid hijos header">header</div>
+      <div class="Grid hijos main">main</div>
+      <div class="Grid hijos sidebar">sidebar</div>
+      <div class="Grid hijos footer">footer</div>
+    </div>
+
+    <!--Clase de GRID 2-->
+
+    <h2 class="Titulos Grid2">Clase de Grid 2</h2>
   </body>
 </html>
