--- a/CSS/index.html
+++ b/CSS/index.html
@@ -170,5 +170,44 @@
     <!--Clase de GRID 2-->
 
     <h2 class="Titulos Grid2">Clase de Grid 2</h2>
+    <h3 class="subtitulos">Row/columnd gap</h3>
+
+    <div class="Grid2 Padre">
+      <div class="Grid2 hijos c1">1</div>
+      <div class="Grid2 hijos c2">2</div>
+      <div class="Grid2 hijos c3">3</div>
+      <div class="Grid2 hijos c4">4</div>
+      <div class="Grid2 hijos c5">5</div>
+    </div>
+
+    <h3 class="subtitulos">Justify ELements</h3>
+    <p>Mover los elementos en la celda</p>
+
+    <div class="Grid2 Padre2">
+      <div class="Grid2 hijos2 c11">1</div>
+      <div class="Grid2 hijos2 c12">2</div>
+      <div class="Grid2 hijos2 c13">3</div>
+      <div class="Grid2 hijos2 c14">4</div>
+      <div class="Grid2 hijos2 c15">5</div>
+    </div>
+
+    <h3 class="subtitulos">Justify ELements</h3>
+    <p>Mover todos los elementos respecto del contenedor</p>
+
+    <div class="Grid2 Padre3">
+      <div class="Grid2 hijos3 c1">1</div>
+      <div class="Grid2 hijos3 c2">2</div>
+      <div class="Grid2 hijos3 c3">3</div>
+      <div class="Grid2 hijos3 c4">4</div>
+      <div class="Grid2 hijos3 c5">5</div>
+    </div>
+
+    <div class="Grid2 Padre4">
+      <div class="Grid2 hijos4 c1">1</div>
+      <div class="Grid2 hijos4 c2">2</div>
+      <div class="Grid2 hijos4 c3">3</div>
+      <div class="Grid2 hijos4 c4">4</div>
+      <div class="Grid2 hijos4 c5">5</div>
+    </div>
   </body>
 </html>
