clase grid 3 y prte de media query

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -209,5 +209,30 @@
       <div class="Grid2 hijos4 c4">4</div>
       <div class="Grid2 hijos4 c5">5</div>
     </div>
+
+    <!--Clase de GRID 3-->
+
+    <h2 class="Titulos Grid3">Clase de Grid 3</h2>
+
+    <div class="Grid3 Padre">
+      <div class="Grid3 hijos c1">1</div>
+      <div class="Grid3 hijos c2">2</div>
+      <div class="Grid3 hijos c3">3</div>
+      <div class="Grid3 hijos c4">4</div>
+      <div class="Grid3 hijos c5">5</div>
+    </div>
+
+    <!--Media Queries-->
+
+    <h2 class="Titulos Media">Clase Media Queries</h2>
+    <p>Se ocupa para el responsive desing.</p>
+
+    <div class="Media Padre">
+      <div class="Media hijos c1">1</div>
+      <div class="Media hijos c2">2</div>
+      <div class="Media hijos c3">3</div>
+      <div class="Media hijos c4">4</div>
+      <div class="Media hijos c5">5</div>
+    </div>
   </body>
 </html>
