--- a/CSS/index.html
+++ b/CSS/index.html
@@ -228,11 +228,17 @@
     <p>Se ocupa para el responsive desing.</p>
 
     <div class="Media Padre">
-      <div class="Media hijos c1">1</div>
-      <div class="Media hijos c2">2</div>
-      <div class="Media hijos c3">3</div>
-      <div class="Media hijos c4">4</div>
-      <div class="Media hijos c5">5</div>
+      <div class="Media hijos c1 media">1</div>
+      <div class="Media hijos c2 media">2</div>
+      <div class="Media hijos c3 media">3</div>
+      <div class="Media hijos c4 media">4</div>
+      <div class="Media hijos c5 media">5</div>
     </div>
+
+    <!--Clase Animaciones-->
+
+    <h2 class="Titulos Animaciones">Clase Animaciones</h2>
+
+    <div class="Animaciones cuadro"></div>
   </body>
 </html>
