--- a/CSS/index.html
+++ b/CSS/index.html
@@ -239,6 +239,25 @@
 
     <h2 class="Titulos Animaciones">Clase Animaciones</h2>
 
-    <div class="Animaciones cuadro"></div>
+    <div class="contenedor padre">
+      <div class="Animaciones cuadro"></div>
+      <div class="Animaciones contenedor">
+        <div class="Animaciones contenedorh" id="ease">Ease</div>
+        <div class="Animaciones contenedorh" id="easein">Ease-in</div>
+        <div class="Animaciones contenedorh" id="easeinout">Ease-in-out</div>
+        <div class="Animaciones contenedorh" id="easeout">Ease-out</div>
+        <div class="Animaciones contenedorh" id="linear">Linear</div>
+        <div class="Animaciones contenedorh" id="cb">cb</div>
+      </div>
+
+      <div class="Animaciones contenedor2">
+        <div class="Animaciones contenedorh2" id="A1">1</div>
+        <div class="Animaciones contenedorh2" id="A2">2</div>
+        <div class="Animaciones contenedorh2" id="A3">3</div>
+        <div class="Animaciones contenedorh2" id="A4">4</div>
+        <div class="Animaciones contenedorh2" id="A5">5</div>
+        <div class="Animaciones contenedorh2" id="A6">6</div>
+      </div>
+    </div>
   </body>
 </html>
