--- a/CSS/index.html
+++ b/CSS/index.html
@@ -259,5 +259,8 @@
         <div class="Animaciones contenedorh2" id="A6">6</div>
       </div>
     </div>
+
+    <h2 class="Titulos Tansiciones">Clase Transiciones</h2>
+    <div class="Transiciones ejemplo"></div>
   </body>
 </html>
